fix commit overwrites, remove overflow hidden on body

--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,7 @@ body {
   font-family: "ff-tisa-web-pro", serif;
   font-size: 16px;
   background-color: #F0F5F5;
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   @media screen and (min-width: 740px) {
     body {
       font-size: 20px; } }
