--- a/sass/base/_main.scss
+++ b/sass/base/_main.scss
@@ -14,7 +14,6 @@ body {
 	font-size: 16px;
 	background-color: #F0F5F5;
 	position: relative;
-	overflow:hidden;
 
 	@media screen and (min-width: $bp-md) {
 		font-size: 20px;
